--- a/Services/Catalog/UpSchoolECommerce.Services.Catalog/UpSchoolECommerce.Services.Catalog.csproj
+++ b/Services/Catalog/UpSchoolECommerce.Services.Catalog/UpSchoolECommerce.Services.Catalog.csproj
@@ -5,12 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.18.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Controllers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\UpSchoolECommerce.Shared\UpSchoolECommerce.Shared.csproj" />
   </ItemGroup>
 
 </Project>
