Discount, Basket and Photo Stock microservices are added and completed

--- a/Services/Discount/UpSchoolECommerce.Services.Discount/Properties/launchSettings.json
+++ b/Services/Discount/UpSchoolECommerce.Services.Discount/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:44570",
+      "applicationUrl": "http://localhost:5014",
       "sslPort": 0
     }
   },
@@ -20,9 +20,9 @@
     "UpSchoolECommerce.Services.Discount": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5014",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
