Order microservice is added

--- a/Services/Order/UpSchoolECommerce.Order.Application/UpSchoolECommerce.Order.Application.csproj
+++ b/Services/Order/UpSchoolECommerce.Order.Application/UpSchoolECommerce.Order.Application.csproj
@@ -5,12 +5,18 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\" />
-    <Folder Include="Handlers\" />
-    <Folder Include="DTOs\" />
-    <Folder Include="Mapping\" />
-    <Folder Include="Queries\" />
     <Folder Include="Results\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Shared\UpSchoolECommerce.Shared\UpSchoolECommerce.Shared.csproj" />
+    <ProjectReference Include="..\UpSchoolECommerce.Order.Domain\UpSchoolECommerce.Order.Domain.csproj" />
+    <ProjectReference Include="..\UpSchoolECommerce.Order.Infrastructure\UpSchoolECommerce.Order.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
