--- a/Services/Order/UpSchoolECommerce.Order.Domain/UpSchoolECommerce.Order.Domain.csproj
+++ b/Services/Order/UpSchoolECommerce.Order.Domain/UpSchoolECommerce.Order.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\UpSchoolECommerce.Order.Domain.Core\UpSchoolECommerce.Order.Domain.Core.csproj" />
+  </ItemGroup>
+
 </Project>
