--- a/Services/Order/UpSchoolECommerce.Services.Order.Api/Properties/launchSettings.json
+++ b/Services/Order/UpSchoolECommerce.Services.Order.Api/Properties/launchSettings.json
@@ -4,7 +4,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:62159",
+      "applicationUrl": "http://localhost:5015",
       "sslPort": 0
     }
   },
@@ -20,9 +20,9 @@
     "UpSchoolECommerce.Services.Order.Api": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5015",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
